cilium/ingress/cilium-ipv6-icmps.yaml
# Clusterwide neighbor advertisment and solicitation for ipv6
# https://www.iana.org/assignments/icmpv6-parameters/icmpv6-parameters.xhtml#icmpv6-parameters-codes-13
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "icmpv6.ingress.from.any"
spec:
  endpointSelector: {}
  ingress:
  - icmps:
    - fields:
      - family: IPv6
        type: 135
      - family: IPv6
        type: 136
